--- a/index.html
+++ b/index.html
@@ -915,6 +915,13 @@ footer {
     </div>
   </header>
 
+
+<div>
+  <span class="kicker"><span class="spark"></span> Monitoramento em tempo real</span>
+  <h1 class="title">Consulte o valor da instalação — com e sem bloqueio</h1>
+  <p class="lead">Instalação a domicílio, app iOS/Android e suporte por WhatsApp. Tecnologia 4G com plataforma Web.</p>
+</div>
+
     <!-- Carrossel de Recuperações -->
   <h2 class="section-title">🔐 Recuperações Eficientes</h2>
   <p class="section-subtitle">Casos reais de veículos recuperados com o sistema Rastreando GPS em todo o estado do Rio de Janeiro.</p>
