--- a/index.html
+++ b/index.html
@@ -916,7 +916,11 @@ footer {
   </header>
 
 
-  
+<div>
+  <span class="kicker"><span class="spark"></span> Monitoramento em tempo real</span>
+
+
+
     <!-- Carrossel de Recuperações -->
   <h2 class="section-title">🔐 Recuperações Eficientes</h2>
   <p class="section-subtitle">Casos reais de veículos recuperados com o sistema Rastreando GPS em todo o estado do Rio de Janeiro.</p>
