--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@ footer {
 
 
     <!-- Carrossel de Recuperações -->
-  <h2 class="section-title">🔐 RASTREADOS + BLOQUEIO</h2>
+  <h2 class="section-title">🔐 RASTREADOR + BLOQUEIO</h2>
   <p class="section-subtitle">Casos reais de veículos recuperados com o sistema Rastreando GPS em todo o estado do Rio de Janeiro.</p>
   <div class="carousel" id="carousel">
     <img src="Recuperacao/Recuperacao1.jpg" class="active" alt="Veículo recuperado 1" />
