--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@ footer {
 
     <!-- Carrossel de Recuperações -->
   <h2 class="section-title">RASTREADOR + BLOQUEADOR 🔐</h2>
-  <p class="section-subtitle">Veja alguns casos reais de veículos recuperados com o sistema Rastreando GPS em todo o estado do Rio de Janeiro.</p>
+  <p class="section-subtitle">Veja alguns casos reais de veículos recuperados com o sistema </strong>Rastreando GPS<strong> em todo o estado do Rio de Janeiro.</p>
   <div class="carousel" id="carousel">
     <img src="Recuperacao/Recuperacao1.jpg" class="active" alt="Veículo recuperado 1" />
     <img src="Recuperacao/Recuperacao2.jpg" alt="Veículo recuperado 2" />
